--- a/cfg/BezierReplanner.cfg
+++ b/cfg/BezierReplanner.cfg
@@ -5,10 +5,10 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-gen.add("step", int_t, 0, "step to set points", 5)
-gen.add("resampling_num", int_t, 0, "resampling number", 5, 1)
-gen.add("srcLane", str_t, 0, "src lane topic nmae", "/based/lane_waypoint_raw")
-gen.add("dstLane", str_t, 0, "dst lane topic nmae", "/based/lane_waypoint_array")
-gen.add("replanning_mode", bool_t, 0, "replanning mode", True)
+gen.add("step", int_t, 0, "step to set points", 5, 1, 50)
+gen.add("resampling_num", int_t, 0, "resampling number", 5, 1, 50)
+gen.add("src_lane", str_t, 0, "src lane topic name", "/based/lane_waypoints_raw")
+gen.add("dst_lane", str_t, 0, "dst lane topic name", "/based/lane_waypoints_array")
+gen.add("replanning_mode", bool_t, 0, "replanning mode", False)
 
 exit(gen.generate(PACKAGE, "bezier_replanner", "bezierReplanner"))
